--- a/facialExpressionRecognition/facialExpressionRecognition.vcxproj.filters
+++ b/facialExpressionRecognition/facialExpressionRecognition.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="utilityFunction.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="BOWKmajorityTrainer.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="featureExtraction.h">
@@ -54,6 +57,9 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="BOWKmajorityTrainer.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
